--- a/Amazon Web Scrapper - Product Price Check (1).ipynb
+++ b/Amazon Web Scrapper - Product Price Check (1).ipynb
@@ -272,7 +272,7 @@
     "    msg = f\"Subject: {subject}\\n\\n{body}\"\n",
     "    \n",
     "    server.sendmail(\n",
-    "        'cheilacarinadasilva@outlook.com',\n",
+    "        'insert-email@outlook.com',\n",
     "        msg\n",
     "     \n",
     "    )"
